--- a/css/main.scss
+++ b/css/main.scss
@@ -74,7 +74,7 @@ body, html {
     display: block;
     width: 140px;
     height: 40px;
-    background: url("../img/icons_spirte.png") no-repeat transparent 0 -53px;
+    background: url("../img/icons_sprite.png") no-repeat transparent 0 -53px;
     overflow: hidden;
     text-indent: -999px;
   }
@@ -145,24 +145,27 @@ ul.tab_links {
       &.selected {
         color: lighten($green, 50%);
         text-shadow: -2px 1.5px 1px darken($green, 10%);
+
+        .arrow {
+          display: block;
+          width: 9px;
+          height: 8px;
+          position: absolute;
+          bottom: -7px;
+          left: 50%;
+          z-index: 10;
+          background: url("../img/icons_sprite.png") no-repeat transparent -40px -19px;
+        }
       }
     }
-    .arrow {
-      display: block;
-      width: 9px;
-      height: 8px;
-      position: absolute;
-      bottom: -7px;
-      left: 50%;
-      z-index: 10;
-      background: url("../img/icons_spirte.png") no-repeat transparent -40px -19px;
-    }
+
   }
 }
 
 .content {
   margin: 15px 0 0;
-  padding: 10px 0;
+  padding: 10px 0 0;
+  @include rounded(5px);
 
   h4.rental_infoline,
   h2.heading {
@@ -186,7 +189,7 @@ ul.tab_links {
       top: 0;
       width: 88px;
       line-height: 28px;
-      background: url("../img/icons_spirte.png") no-repeat transparent -55px 0;
+      background: url("../img/icons_sprite.png") no-repeat transparent -55px 0;
     }
   }
   h2.heading {
@@ -259,6 +262,27 @@ ul.tab_links {
   .tabs_content {
     display: none;
     padding: 5px 0;
+    background-color: #f8faf6;
+    @include rounded(5px);
+
+    .col1 {
+      width: 700px;
+      margin: 5px;
+
+      .boxes {
+        display: block;
+        overflow: hidden;
+
+        > li {
+          display: block;
+          float: left;
+          width: 348px;
+          height: 179px;
+          margin: 1px;
+          background: url("../img/tab_box_sprite.png");
+        }
+      }
+    }
   }
 }
 
